--- a/src/app/page/list/list.component.html
+++ b/src/app/page/list/list.component.html
@@ -20,6 +20,30 @@
     <input [(ngModel)]="phrase" class="form-control filterinput" type="text">
 </div>
 
+<div class="row">
+    <div class="col-12">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item"><a class="page-link" (click)="jumpBackward()">Previous</a></li>
+                <li *ngFor="let pageNum of getPageNumbers()" class="page-item">
+                    <div *ngIf="(pageNum==currentPage)">
+                        <a class="page-link" style="color:darkmagenta;background-color: lightgray;"  (click)="jumpToPage(pageNum)">
+                            {{ pageNum }}
+                        </a>
+                    </div>
+                    <div *ngIf="!(pageNum==currentPage)">
+                        <a class="page-link"  (click)="jumpToPage(pageNum)">
+                            {{ pageNum }}
+                        </a>
+                    </div>
+                </li>
+
+                <li class="page-item"><a class="page-link" (click)="jumpForvard()">Next</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
+
 <div class="row mt-3 card-h 100">
     <div class="col-12 col-md-6 col-xl-3 card-h 100" *ngFor="let row of movie$ | async 
                                   |filter:phrase:filterKey 
@@ -54,7 +78,7 @@
                 <li class="page-item"><a class="page-link" (click)="jumpBackward()">Previous</a></li>
                 <li *ngFor="let pageNum of getPageNumbers()" class="page-item">
                     <div *ngIf="(pageNum==currentPage)">
-                        <a class="page-link" style="color: red;"  (click)="jumpToPage(pageNum)">
+                        <a class="page-link" style="color: red;background-color: lightgray;"  (click)="jumpToPage(pageNum)">
                             {{ pageNum }}
                         </a>
                     </div>
