--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,1 +1,21 @@
-<p>home works!sdxfcvghj</p>
+<h1>Filmek</h1>
+
+<h3>Mindegy, hogy félelmetes vagy vicces, drámai vagy romantikus,
+    semmi sincs olyan hatással ránk, mint egy jó film.
+     Temérdek műsor, tengernyi élmény.</h3>
+
+<h4>A listában számos játékfilm, dokumentumfilm, dráma, vígjáték,romantikus film, akció, 
+    kalandfilm, gyerkeműsor, és sok más műsor található. 
+    Nézz annyi filmet, amennyit csak akarsz, amikor csak akarod.</h4>
+
+
+
+      
+
+
+<div class="btn-group">
+    <button  [routerLink]="['list']" class="btn btn-success btn-lg">
+      <i class="fa ">Movie list</i>
+    </button>
+
+  </div>
